# axum-app-template

./: Cargo.toml
public/: main.css
src/: app_state.rs  cli.rs  fn_decorators.rs  main.rs  syn.rs
src/endpoints/: index.html  index.rs  login.rs  mod.rs
src/endpoints/api/: mod.rs
src/messages/: mod.rs
src/model/: login_info.rs
