[package]
name = "axum-app-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["query"] }
axum-test = "15.3"
tower = { version = "0.4", features = ["timeout", "buffer"] }
tower-http = { version = "0.5.0", features = ["fs", "limit"] }
tower-layer = "0.3"
log = "0.4"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
fn-decorator = "1"
lazy_static = "1"
option-inspect-none = "1.0.0"
jsonwebtoken = "9"
getrandom = "0.2"

axum-helpers = { git = "https://github.com/bytifex/axum-helpers.git", rev = "0c9f39f36f8d17af010cb78667c73cd56c3cb497" }
